[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/farm_art/circle_orange.png" type="Texture" id=1]
[ext_resource path="res://assets/art/farm_art/dirt.png" type="Texture" id=2]
[ext_resource path="res://assets/art/farm_art/circle_black.png" type="Texture" id=3]
[ext_resource path="res://scripts/Field.gd" type="Script" id=4]
[ext_resource path="res://scripts/GrowthProgress.gd" type="Script" id=5]
[ext_resource path="res://scripts/ItemSlot.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 86.7758, 85.375 )

[node name="Field" type="Node2D"]
position = Vector2( 302.626, 127.576 )
script = ExtResource( 4 )

[node name="plot1" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="plot1_sprite" type="Sprite" parent="plot1"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="plot1_collision" type="CollisionPolygon2D" parent="plot1"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 218, 212, -218, 212, -218, -212, 218, -212 )

[node name="plot2" type="Area2D" parent="."]
position = Vector2( 100, 0 )
script = ExtResource( 6 )

[node name="plot2_sprite" type="Sprite" parent="plot2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="plot2_collision" type="CollisionPolygon2D" parent="plot2"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 218, 212, -218, 212, -218, -212, 218, -212 )

[node name="plot3" type="Area2D" parent="."]
position = Vector2( 0, 100 )
script = ExtResource( 6 )

[node name="plot3_sprite" type="Sprite" parent="plot3"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="plot3_collision" type="CollisionPolygon2D" parent="plot3"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 218, 212, -218, 212, -218, -212, 218, -212 )

[node name="plot4" type="Area2D" parent="."]
position = Vector2( 100, 100 )
script = ExtResource( 6 )

[node name="plot4_sprite" type="Sprite" parent="plot4"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="plot4_collision" type="CollisionPolygon2D" parent="plot4"]
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( 218, 212, -218, 212, -218, -212, 218, -212 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 49.5497, 50.4997 )
shape = SubResource( 1 )

[node name="GrowthProgressRadial" type="TextureProgress" parent="."]
margin_left = -19.95
margin_top = -19.0001
margin_right = 160.05
margin_bottom = 161.0
rect_scale = Vector2( 0.75, 0.75 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )
fill_mode = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
