[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/farm_art/potato.png" type="Texture" id=1]
[ext_resource path="res://assets/art/farm_art/dirt.png" type="Texture" id=2]
[ext_resource path="res://scenes/Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/farm_art/tomato_stem.png" type="Texture" id=4]
[ext_resource path="res://scenes/Seed.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/farm_art/sign.png" type="Texture" id=6]
[ext_resource path="res://scripts/Field.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 423.388, 430.95 )

[node name="MainScene" type="Node2D"]

[node name="monster" type="Sprite" parent="."]
modulate = Color( 0.764706, 0.14902, 0.745098, 1 )
position = Vector2( 820.087, 247.357 )
texture = ExtResource( 1 )

[node name="Field" type="Node2D" parent="."]
position = Vector2( 193.376, 193.126 )
scale = Vector2( 0.2, 0.2 )

[node name="plot1" type="Sprite" parent="Field"]
position = Vector2( 2.92236, -5.84399 )
texture = ExtResource( 2 )
offset = Vector2( 372, -69 )

[node name="plot2" type="Sprite" parent="Field"]
position = Vector2( 500, 0 )
texture = ExtResource( 2 )
offset = Vector2( 372, -69 )

[node name="plot3" type="Sprite" parent="Field"]
position = Vector2( 0, 500 )
texture = ExtResource( 2 )
offset = Vector2( 372, -69 )

[node name="plot4" type="Sprite" parent="Field"]
position = Vector2( 500, 500 )
texture = ExtResource( 2 )
offset = Vector2( 372, -69 )

[node name="Timer" type="Timer" parent="Field"]
wait_time = 10.0

[node name="Area2D" type="Area2D" parent="Field"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Area2D"]
position = Vector2( 625.235, 176.493 )
scale = Vector2( 1, 1 )
shape = SubResource( 3 )

[node name="FieldScript" type="Node2D" parent="Field"]
script = ExtResource( 8 )
Inventory = NodePath("../../Inventory")
MainScene = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Bar" parent="GUI" instance=ExtResource( 3 )]
margin_left = 726.38
margin_top = 387.824
margin_right = 1722.38
margin_bottom = 620.824
rect_scale = Vector2( 0.2, 0.2 )

[node name="plant" type="Sprite" parent="."]
position = Vector2( 271.432, 147.756 )
scale = Vector2( 0.223743, 0.240755 )
texture = ExtResource( 4 )

[node name="Seed" parent="." instance=ExtResource( 5 )]
position = Vector2( 146.8, 75.8198 )

[node name="Inventory" type="Node2D" parent="."]
position = Vector2( 251.657, 444.702 )
__meta__ = {
"_edit_group_": true
}

[node name="sign" type="Sprite" parent="Inventory"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
